fix: Add maven-surefire-plugin to enable preview